@@ -11,6 +11,8 @@
  *
  * CHANGES
  * -------
+ * 2008/05/25 (1.0.7.22)
+ *   -  Added highlighting of import and package directives as non-OOP
  * 2005/12/28 (1.0.4)
  *   -  Added instanceof keyword
  * 2004/11/27 (1.0.3)
@@ -51,8 +53,11 @@
 
 $language_data = array (
 	'LANG_NAME' => 'Java',
-	'COMMENT_SINGLE' => array(1 => '//', 2 => 'import'),
+	'COMMENT_SINGLE' => array(1 => '//'),
 	'COMMENT_MULTI' => array('/*' => '*/'),
+	'COMMENT_REGEXP' => array(
+        //Import and Package directives (Basic Support only)
+        2 => '/(?:(?<=import[\\n\\s])|(?<=package[\\n\\s]))[\\n\\s]*([a-zA-Z0-9_]+\\.)*([a-zA-Z0-9_]+|\*)(?=[\n\s;])/i'),
 	'CASE_KEYWORDS' => GESHI_CAPS_NO_CHANGE,
 	'QUOTEMARKS' => array("'", '"'),
 	'ESCAPE_CHAR' => '\\',
@@ -65,7 +70,7 @@ $language_data = array (
 			'interface', 'throw', 'final', 'native', 'synchronized', 'this',
             'abstract', 'transient', 'instanceof', 'assert', 'continue',
             'default', 'enum', 'package', 'static', 'strictfp', 'super',
-            'volatile', 'const', 'goto'
+            'volatile', 'const', 'goto', 'import', 'package'
 			),
 		2 => array(
 			'null', 'false', 'true'
@@ -1343,7 +1348,7 @@ $language_data = array (
 			),
 		'COMMENTS' => array(
 			1=> 'color: #666666; font-style: italic;',
-			2=> 'color: #999900;',
+			2=> 'color: #006699;',
 			'MULTI' => 'color: #666666; font-style: italic;'
 			),
 		'ESCAPE_CHAR' => array(
